# KFO-Server

./: .coveragerc  .gitignore  .travis.yml  BACKCOMPATIBILITY.md  CHANGELOG.md  CODINGPRACTICES.md  Dockerfile  KFO-Server-master.rar  README.md  docker-compose.yml  os  pyproject.toml  requirements.txt  start-unix.sh  start-windows.bat  start_server.py  subprocess  sys  test.py  tox.ini
.github/workflows/: python-ci.yml  pythonapp.yml
config_sample/: README.md  area_lists.yaml  area_templates.yaml  areas.yaml  backgrounds.yaml  characters.yaml  command_aliases.yaml  config.yaml  gimp.yaml  iniswaps.yaml  music.yaml  music_lists.yaml  raidmode.yaml  server_links.yaml  url.txt
config_sample/area_lists/: default_aa.yaml  old.yaml
config_sample/music_lists/: deadly_life.yaml  dr1.yaml  dr2.yaml  trial.yaml
docs/: cmd_music.txt  commands.md  prefs.md
migrations/: v5.sql  v6.sql
scripts/: music2yaml.py
server/: aoprotocol.py  area v2.py  area.py  area_manager.py  area_manager_revamp.py  ban_manager.py  client.py  client_changearea.py  client_manager.py  clients.py  commands.py  commands_alt.py  config.py  constants.py  database.py  discordbot.py  districtclient.py  emotes.py  evidence.py  exceptions.py  fantacrypt.py  game_manager.py  gamewithareas.py  gamewithareas_manager.py  hub_manager.py  kfoserver.py  lang.py  logger.py  masterserverclient.py  medieval_parser.py  music_manager.py  nonstopdebate.py  party_manager.py  playergroup_manager.py  raidmode.py  steptimer_manager.py  subscriber.py  tasker.py  test.py  timer.py  (+8 more)
server/commands/: __init__.py  admin.py  area_access v2.py  area_access.py  areas v2.py  areas.py  battle.py  casing.py  character.py  fun.py  hubs.py  inventory.py  messaging.py  music.py  roleplay.py  yttd.py
server/depunct-mintify/: 0001-Add-depunct-command-in-fun-category.patch  0002-Add-mintify-command-in-fun-category.patch
server/network/: aoprotocol.py  aoprotocol_ws.py  masterserverclient.py  ms_parser.py  proxy_manager.py  webhooks.py
server/validate/: areas.py  backgrounds.py  characters.py  config.py  gimp.py  music.py
servermaster3/config/: areas.yaml  areas_new.yaml  backgrounds.yaml  censors.yaml  (+5 more)
tests/: __init__.py  structures.py  test_authorization.py  test_blind.py  test_blood.py  test_bloodclean.py  test_bloodnotification.py  test_bloodnotify_existsmear.py  test_bloodnotify_existtrail.py  test_bloodsmear.py  test_bloodsmearexsnotify.py  test_characters.py  test_client_connection.py  test_connect.py  test_constants.py  test_deafen.py  test_gag.py  test_global.py  test_ic.py  test_info.py  test_lights.py  test_ms_parser.py  test_ooc.py  test_poisoncure.py  test_roll.py  test_scream.py  test_senseblock.py  test_senseblockblind.py  test_senseblockdeaf.py  test_senseblockgag.py  test_whisper.py  test_zone.py  test_zonebasic.py  test_zonechangeareas.py  test_zonechanger.py  test_zonechangewatchers.py  test_zoneeffect.py  test_zoneextranotifications.py  test_zonepassive.py  test_zzznodebug.py
translations/: it.yaml
(+7 files in other folders)
