[project]
name = "kfo-server"
version = "0.1.0"
description = "KFO Attorney Online Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "arrow>=1.3.0",
    "black",
    "discord.py>=2.5.2",
    "ruff",
    "geoip2>=4.7.0",
    "oyaml>=1.0",
    "pystun3>=1.0.0",
    "pytest",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "timeparse-plus>=1.2.0",
    "tox>=4",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.black]
line-length = 120
target-version = ["py311"]
