[project]
name = "kfo-server"
version = "0.1.0"
description = "KFO Attorney Online Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "arrow>=1.3.0",
    "discord.py>=2.5.2",
    "ruff",
    "geoip2>=4.7.0",
    "oyaml>=1.0",
    "pystun3>=1.0.0",
    "pytest",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "timeparse-plus>=1.2.0",
    "tox>=4",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server"]

[tool.ruff]
line-length = 120
target-version = "py311"
# Exclude utility scripts from linting
exclude = ["scripts/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# E741: Ambiguous variable name (e.g., 'l') - used intentionally in list comprehensions
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
# E402: Module level import not at top of file - imports must come after __all__ definitions
# F403: Star imports - intentional for re-exporting command modules
"server/commands/__init__.py" = ["E402", "F403"]
